--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@repo/db": "*",
+    "@repo/store": "*",
     "@repo/ui": "*",
     "next": "^14.1.1",
+    "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recoil": "^0.7.7"
