--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,7 +6,8 @@
     "./button": "./src/button.tsx",
     "./card": "./src/card.tsx",
     "./code": "./src/code.tsx",
-    "./Appbar":"./src/Appbar.tsx"
+    "./Appbar":"./src/Appbar.tsx",
+    "./Center":"./src/Center.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
