--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,7 +7,8 @@
     "./card": "./src/card.tsx",
     "./code": "./src/code.tsx",
     "./Appbar":"./src/Appbar.tsx",
-    "./Center":"./src/Center.tsx"
+    "./Center":"./src/Center.tsx",
+    "./Select":"./src/Select.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
