--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # - name: Generate prisma client
-      #   run: cd db/packages && npx prisma generate && cd ../..
+      - name: Generate prisma client
+        run: cd db/packages && npx prisma generate && cd ../..
 
       - name: Run build
         run: npm run build
