--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
         run: npm install
 
       - name: Generate prisma client
-        run: cd db/packages && npx prisma generate && cd ../..
+        run: cd packages/db && npx prisma generate && cd ../..
 
       - name: Run build
         run: npm run build
