--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,3 +28,15 @@ jobs:
 
     - name: Verify Pushed Image
       run: docker pull rglair/paytm-clone:latest  # Replace with your Docker Hub username and repository
+
+    - name: Deploy to EC2
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ secrets.SSH_HOST }}
+        username: ${{ secrets.SSH_USERNAME }}
+        key: ${{ secrets.SSH_KEY }}
+        script: |
+          sudo docker pull rglair/paytm-clone:latest
+          sudo docker stop paytm-clone || true
+          sudo docker rm paytm-clone || true
+          sudo docker run -d --name paytm-clone -p 3005:3000 rglair/paytm-clone:latest
