--- a/packages/store/tsconfig.json
+++ b/packages/store/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "outDir": "dist"
   },
-  "include": ["src"],
+  "include": ["src", "../../apps/user-app/app/store/user.atom.ts"],
   "exclude": ["node_modules", "dist"]
 }
